fix(DCOS-15921): Fix expand/collapse button for different code block sizes

--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -26,6 +26,7 @@
           float: right;
 
           .icon {
+            margin-bottom: 2px;
             margin-left: 5px;
           }
         }
